# ChangeLog for media-libs/panotools
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/panotools/ChangeLog,v 1.2 2004/06/24 23:18:48 agriffis Exp $

*panotools-2.6 (05 Mar 2004)

  05 Mar 2004; Luca Barbato <lu_zero@gentoo.org> metadata.xml,
  panotools-2.6.ebuild:
  Initial commit
