@@ -1,4 +1,6 @@
-MD5 6bc60d0b2e474c5bc5cd8215962c58a5 panotools-2.6.ebuild 936
-MD5 a3fef9342f0fb2fb27240c56fe25f2ea ChangeLog 350
+MD5 eed4127724e2409b980793edbbe57c1a ChangeLog 536
 MD5 dffd46174e78b327c834fc3e4b1cf848 metadata.xml 160
+MD5 47b9d19e096b7432617a885830c48b98 panotools-2.6.ebuild 935
+MD5 be46fc2d347aba811a50c7e40662e21f panotools-2.7.0.8.ebuild 700
+MD5 825822b85e6626200ea237c1276831ad files/digest-panotools-2.7.0.8 70
 MD5 3707f22225da1a6f6ec3f70d6ece5e56 files/digest-panotools-2.6 144
