@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/panotools/panotools-2.6.ebuild,v 1.3 2004/07/14 20:23:19 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/panotools/panotools-2.6.ebuild,v 1.4 2005/01/20 23:31:04 lu_zero Exp $
 
 inherit eutils
 
