@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/panotools
-# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/panotools/ChangeLog,v 1.2 2004/06/24 23:18:48 agriffis Exp $
+# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/panotools/ChangeLog,v 1.3 2005/01/20 23:31:04 lu_zero Exp $
+
+*panotools-2.7.0.8 (03 Jan 2005)
+
+  03 Jan 2005; Luca Barbato <lu_zero@gentoo.org> +panotools-2.7.0.8.ebuild:
+  New release, thanks to David Grant <david.grant@telus.net> for the ebuild
 
 *panotools-2.6 (05 Mar 2004)
 
